adding header component

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --watch-content-base --open",
+    "build": "webpack --mode=production --output ./main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.26.0"
+    "axios": "^0.26.0",
+    "chartist": "^0.11.4"
   },
   "devDependencies": {
     "webpack": "^4.43.0",
